manifests/centos-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: centos7
  namespace: default
  labels:
    env: study
spec:
  containers:
  - name: centos7
    image: centos:7
    command:
    - "sh"
    - "-c"
    args:
    - |
      while true
        do
          sleep ${DELAY}
        done
