manifests/config-map.yml
apiVersion: v1
kind: Pod
metadata:
  name: sample
  labels:
    name: sample
spec:
  containers:
  - name: sample
    image: nginx:1.17.2-alpine
    volumeMounts:
      - name: config-storage
        mountPath: /home/nginx
  volumes:
    - name: config-storage
      configMap:
        name: sample-config
        items:
        - key: sample.cfg
          path: sample.cfg

# env | grep TYPE
# TYPE=application

# cat /home/nginx/sample.cfg
# user: kzk-maeda
