manifests/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  namespace: default
  labels:
    name: myapp
    env: study
spec:
  containers:
    - name: hello-world
      image: hello-world
