manifests/secret.yml
apiVersion: v1
kind: Pod
metadata:
  name: sample
  labels:
    name: myapp
spec:
  containers:
  - name: sample
    image: nginx:1.17.2-alpine
    volumeMounts:
    - name: secret-storate
      mountPath: /home/nginx
  volumes:
    - name: secret-storate
      secret:
        secretName: sample-secret
        items:
          - key: keyfile
            path: keyfile


# ls /home/nginx/
# keyfile
# cat /home/nginx/keyfile
# YOUR_SECRET_KEY/

# env | grep MESSAGE
# MESSAGE=hello world
