manifests/stateful-set.yml
apiVersion: v1
kind: Service
metadata:
  name: sample-svc
spec:
  clusterIP: None
  selector:
    app: web
    env: study
  ports:
  - port: 80
    targetPort: 80

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      app: web
      env: study
  serviceName: sample-svc
  replicas: 1
  template:
    metadata:
      labels:
        app: web
        env: study
    spec:
      containers:
      - name: nginx
        image: nginx:1.17.2-alpine
        ports:
        - containerPort: 80
          name: web
        volumeMounts:
        - name: storage
          mountPath: /home/nginx
  volumeClaimTemplates:
  - metadata:
      name: storage
    spec:
      storageClassName: slow
      accessModes:
        - ReadWriteMany
      resources:
        requests:
          storage: 1Gi
